# open-clicker-helper

./: .gitignore  LICENSE  PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
docs/: architecture.md  porting-windows.md  providers.md
sidecar/: README.md  pyproject.toml
sidecar/och_sidecar/: __init__.py  __main__.py  grounding.py  handlers.py  imaging.py  pipeline.py  rpc.py  setup.py
sidecar/och_sidecar/providers/: __init__.py  base.py  stt_mlx_whisper.py  stt_openai.py  tts_kokoro.py  tts_openai.py  vlm_anthropic.py  vlm_ollama.py  vlm_openai.py
sidecar/tests/: test_grounding.py  test_imaging.py  test_pipeline.py  test_providers.py  test_rpc.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  error.rs  history.rs  ipc.rs  lib.rs  main.rs  sidecar.rs  store.rs
src-tauri/src/platform/: mod.rs  stub.rs
src-tauri/src/platform/macos/: ax.rs  capture.rs  mod.rs  mouse.rs  permissions.rs  window.rs
ui/: index.html  overlay.html  package.json  tsconfig.json  vite.config.ts
ui/src/components/: VoiceSelect.tsx
ui/src/lib/: api.ts
ui/src/overlay/: Annotation.tsx  Overlay.tsx  animator.ts  main.tsx
ui/src/settings/: App.tsx  styles.css
ui/src/settings/pages/: Debug.tsx  Grounding.tsx  History.tsx  Hotkeys.tsx  Permissions.tsx  Prompts.tsx  Providers.tsx  Reset.tsx  Setup.tsx
