[project]
name = "och-sidecar"
version = "0.0.1"
description = "open-clicker-helper Python sidecar (STT/TTS/LLM/VLM providers + pipeline)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.9",
  "httpx>=0.28",
  "soundfile>=0.12.1",
  "numpy>=1.24",
  "Pillow>=10.0",
  "mlx-whisper>=0.3.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "kokoro>=0.9.4",
]

[project.optional-dependencies]
# Heavy ML extras are opt-in so CI can run pytest without downloading torch.
mlx = [
  "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
faster-whisper = ["faster-whisper>=1.0"]
kokoro = ["kokoro>=0.9.4", "soundfile>=0.12"]
# Cloud provider SDKs — install whichever you need.
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]

# PEP 735 dependency groups. `uv sync` installs the `dev` group by default,
# so CI doesn't need any extra flags to get pytest.
[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
]

[project.scripts]
och-sidecar = "och_sidecar.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["och_sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
